@@ -1,5 +1,10 @@
 2002-08-26  Vino Crescini  <jcrescin@cit.uws.edu.au>
 
+	* datastruct/stringlist.c :
+	* datastruct/stringlist.h :
+
+	  - Added a simple list wrapper for strings.
+
 	* trans/Makefile :
 	* trans/varlist.c :
 	* trans/varlist.h :
